--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,26 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-dark {
+  --weight-title: 785;
+  --weight-text: 465;
+  --bckgrnd-color: #000;
+  --accent-color: #00cc14;
+  --bckgrnd-img: repeating-linear-gradient(#000, #000 2px, transparent 2px 4px),
+    repeating-linear-gradient(90deg, #000, #000 2px, transparent 2px 4px),
+    linear-gradient(#007f0c, #004306);
+}
+
+:root.theme-light {
+  --weight-title: 700;
+  --weight-text: 400;
+  --bckgrnd-color: #fff;
+  --accent-color: #000;
+  --bckgrnd-img: repeating-linear-gradient(
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px 4px),
+    linear-gradient(#e7e7e7, #1a1a1a);
+}
