--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,16 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: "Inter", sans-serif;
+  --accent-font: "PressStart2P", fantasy;
+  --bckgrnd-color: #fff;
+  --accent-color: #000;
+  --weight-title: 700;
+  --weight-text: 400;
+  --bckgrnd-img: repeating-linear-gradient(
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px 4px),
+    linear-gradient(#e7e7e7, #1a1a1a);
+}
