--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
   max-inline-size: 1440px;
   min-block-size: 100dvb;
   font-family: var(--main-font), Arial, sans-serif;
-  font-variation-settings: 'wght' var(--weigth-text, 400);
+  font-variation-settings: "wght" var(--weigth-text, 400);
   font-size: 18px;
   color: var(--accent-color);
   background-color: var(--bckgrnd-color, #fff);
@@ -27,3 +27,108 @@
   background-size: cover;
   background-attachment: fixed;
 }
+
+.container {
+  width: clamp(23.438rem, 16.3739rem + 30.1401vw, 43.5rem);
+  margin: 0 auto;
+}
+
+
+
+.header {
+  background-color: var(--bckgrnd-color);
+  inline-size: calc(100% + 4px);
+  border: 2px solid var(--accent-color);
+  margin-block-start: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-block-end: 100px;
+}
+
+.logo {
+  font-family: var(--accent-font);
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  text-transform: uppercase;
+  margin-block-start: 136px;
+}
+
+.header-title {
+  font-family: var(--accent-font);
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
+  margin-block-start: 20px;
+}
+
+.theme-menu__list {
+  font-size: 14px;
+  margin-block-start: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-inline-start: 17px;
+  margin-block-end: 21px;
+}
+
+.theme-menu__button {
+  border: none;
+  font-family: inherit;
+  background-color: transparent;
+  cursor: pointer;
+  font-family: var(--accent-font);
+  text-transform: uppercase;
+}
+
+.card {
+  background-color: var(--bckgrnd-color);
+  inline-size: calc(100% + 4px);
+  border: 2px solid var(--accent-color);
+}
+
+.card-title {
+  font-size: 18px;
+  font-weight: var(--weight-title);
+  font-variation-settings: "wght" var(--weight-title);
+  font-style: normal;
+  line-height: normal;
+  padding: 5px 10px;
+}
+
+.card-img {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+}
+
+.card__text {
+  margin-block-start: 25px;
+
+  margin-inline-start: 25px;
+}
+
+.card__icons-container {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  margin-block-start: 25px;
+  margin-block-end: 23px;
+}
+
+.card__like-button {
+  border: 2px solid currentColor;
+  inline-size: 130px;
+  block-size: 38px;
+  display: grid;
+  place-items: center;
+  font-family: var(--accent-font), fantasy;
+  font-size: 14px;
+  position: relative;
+  transition: box-shadow 0.3s ease;
+  background-color: transparent;
+  margin-inline-end: 25px;
+}
+
+.card__icon-button {
+  background-color: transparent;
+}
+
