--- a/styles/variables.css
+++ b/styles/variables.css
@@ -17,4 +17,5 @@
     --heart-sparks-color: red;
     --heart-body-color: transparent;
     --heart-core-color: transparent;
+    --btn-like-color: #fff;
 }
