--- a/styles/themes.css
+++ b/styles/themes.css
@@ -9,6 +9,7 @@
   --weight-text: 465;
   --bckgrnd-color: #000;
   --accent-color: #00cc14;
+  --btn-like-color: #00cc14;
   --bckgrnd-img: repeating-linear-gradient(#000, #000 2px, transparent 2px 4px),
     repeating-linear-gradient(90deg, #000, #000 2px, transparent 2px 4px),
     linear-gradient(#007f0c, #004306);
@@ -26,4 +27,18 @@
     ),
     repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px 4px),
     linear-gradient(#e7e7e7, #1a1a1a);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root.theme-dark {
+    --weight-title: 785;
+    --weight-text: 465;
+    --bckgrnd-color: #000;
+    --accent-color: #00cc14;
+    --btn-like-color: #00cc14;
+    --bckgrnd-img: repeating-linear-gradient(#000, #000 2px, transparent 2px 4px),
+      repeating-linear-gradient(90deg, #000, #000 2px, transparent 2px 4px),
+      linear-gradient(#007f0c, #004306);
+  }
+  
 }
