внес все правки после ревью

--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@
   font-family: var(--accent-font);
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   text-transform: uppercase;
-  margin-block-start: 136px;
+  padding-block-start: 136px;
 }
 
 .header-title {
@@ -63,7 +63,7 @@
   margin-block-start: 25px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 11px;
   margin-inline-start: 17px;
   margin-block-end: 21px;
 }
@@ -116,6 +116,10 @@
   opacity: 0.6;
 }
 
+.theme-menu__button:focus-visible {
+  opacity: 0.6;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -139,13 +143,48 @@
 }
 
 .img-container {
-  block-size: 700px;
+  max-block-size: 700px;
+  border-bottom: 2px solid var(--accent-color);
+  border-top: 2px solid var(--accent-color);
 }
 
 .card__img {
   inline-size: 100%;
   block-size: 100%;
   object-fit: cover;
+  object-position: center;
+}
+
+.brightness {
+  filter: brightness(150%);
+}
+
+.contrast {
+  filter: contrast(50%);
+}
+
+.blur {
+  filter: blur(0.1rem);
+}
+
+.opacity {
+  filter: opacity(0.7);
+}
+
+.grayscale {
+  filter: grayscale(0.7);
+}
+
+.saturate {
+  filter: saturate(170%);
+}
+
+.hue-rotate {
+  filter: hue-rotate(-90deg);
+}
+
+.sepia-brightness {
+  filter: sepia(70%) brightness(200%);
 }
 
 .card__label {
@@ -182,11 +221,29 @@
   align-items: center;
   justify-content: end;
   margin-block-start: 25px;
-  margin-block-end: 23px;
+  margin-block-end: 27px;
+}
+
+.like-icon {
+  padding-right: 2px;
 }
 
 .card__icon-button {
   background-color: transparent;
+  cursor: pointer;
+  padding: 0;
+  margin-inline-end: 5px;
+  margin-block-start: 0px;
+  block-size: 36px;
+  border: 2px solid transparent;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
 }
 
 .card__like-button {
@@ -201,6 +258,7 @@
   transition: box-shadow 0.3s ease;
   background-color: transparent;
   margin-inline-end: 25px;
+  cursor: pointer;
 }
 
 .card__like-button::after {
@@ -236,7 +294,7 @@
   z-index: 1;
 }
 
-.footer__save-btn {
+.save-block__save-btn {
   display: grid;
   grid-template-columns: min-content 1fr;
   align-items: center;
@@ -246,16 +304,17 @@
   background-color: var(--bckgrnd-color);
   font-family: var(--accent-font);
   font-size: 14px;
+  cursor: pointer;
+  position: relative;
 }
 
-.footer__save-btn .btn-floppy {
+.save-block__save-btn .btn-floppy {
   inline-size: 39px;
   block-size: 39px;
 }
 
-.footer {
+.save-block {
   margin-block-end: 105px;
-  position: relative;
 }
 
 .btn-floppy {
@@ -263,11 +322,19 @@
   margin-block-start: 14px;
 }
 
-.footer__btn-text {
+.save-block__btn-text {
   margin-top: -2px;
   margin-inline-start: -15px;
 }
 
+.btn_decoration {
+  transition: color 0.3s;
+}
+
+.btn_decoration:hover svg {
+color: var(--bckgrnd-color);
+  z-index: 2;
+}
 
 .btn_decoration::before {
   content: "";
@@ -283,8 +350,9 @@
   transform-origin: left;
 }
 
-.btn_decoration:hover::before{
+.btn_decoration:hover::before {
   transform: scaleX(1);
+  fill: #fff;
 }
 
 .btn_decoration:focus {
@@ -293,6 +361,54 @@
 
 .btn_decoration:focus-visible {
   box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.save-block__save-btn:hover svg path {
+  fill: red;
+}
+
+
+
+@media (width > 375px) {
+  .page {
+    min-width: 375px;
+    max-width: 696px;
+  }
+
+  .modal {
+    max-width: 357px;
+  }
+}
+
+@media (max-width: 900px) {
+  .logo {
+    padding-block-start: 120px;
+  }
+}
+
+@media (max-width: 375px) {
+  .img-container {
+    block-size: 375px;
+    inline-size: 373px;
+  }
+
+  .card__text {
+    inline-size: 320px;
+  }
+
+  .save-block__save-btn {
+    width: 306px;
+    height: 85px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .save-block__btn-text {
+    margin-block-end: 10px;
+    margin-inline-start: 5px;
+  }
 }
 
 .dialog {
@@ -307,13 +423,80 @@
   max-inline-size: 100vi;
 }
 
+.dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.7);
+}
+
 .modal {
   position: sticky;
-  border: 0.2rem solid var(--themes-main-color);
+  border: 0.2rem solid var(--accent-color);
   margin: 0 auto;
-  background-color: var(--themes-background, #fff);
-  font-family: var(--font-pressstart2p, "Courier New", fantasy);
+  background-color: var(--bckgrnd-color, #fff);
+  font-family: var(--accent-font, "Courier New", fantasy);
   inset-block-start: calc(50vb - (5.3rem / 2));
 }
 
-   
+.modal__title {
+  color: var(--accent-color, #000);
+  font-size: 14px;
+  font-style: normal;
+  line-height: 150%;
+  text-transform: uppercase;
+  inline-size: 62%;
+}
+
+.modal__title-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__inner-container {
+  display: flex;
+  text-transform: uppercase;
+  gap: 20px;
+  justify-content: center;
+  margin-block-start: 32px;
+  margin-block-end: 30px;
+}
+
+.modal__svg-floppy {
+  /* color: var(--floppy-color); */
+  mix-blend-mode: difference;
+  inline-size: 39px;
+  block-size: 39px;
+  margin-block-start: 20px;
+}
+
+.modal__btn {
+  background-color: var(--bckgrnd-color);
+  border: 2px solid var(--accent-color);
+  text-transform: uppercase;
+  inline-size: 257px;
+  block-size: 38px;
+  padding: 9px 17px;
+  position: relative;
+}
+
+.modal__dialog-form {
+  display: flex;
+  justify-content: center;
+  margin-block-end: 30px;
+}
+
+.modal__btn::after {
+  content: "";
+  position: absolute;
+  inset-block-start: 0;
+  inset-inline-start: 0;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: var(--accent-color);
+  display: block;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+  transform-origin: left;
+}
+
+.modal__btn:hover::after {
+  transform: scaleX(1);
+}
