--- a/styles/themes.css
+++ b/styles/themes.css
@@ -10,6 +10,7 @@
   --bckgrnd-color: #000;
   --accent-color: #00cc14;
   --btn-like-color: #00cc14;
+  --floppy-color: #00cc14;
   --bckgrnd-img: repeating-linear-gradient(#000, #000 2px, transparent 2px 4px),
     repeating-linear-gradient(90deg, #000, #000 2px, transparent 2px 4px),
     linear-gradient(#007f0c, #004306);
@@ -20,6 +21,7 @@
   --weight-text: 400;
   --bckgrnd-color: #fff;
   --accent-color: #000;
+  --floppy-color: #000;
   --bckgrnd-img: repeating-linear-gradient(
       #d3d3d3,
       #d3d3d3 2px,
@@ -36,6 +38,7 @@
     --bckgrnd-color: #000;
     --accent-color: #00cc14;
     --btn-like-color: #00cc14;
+    --floppy-color: #00cc14;
     --bckgrnd-img: repeating-linear-gradient(#000, #000 2px, transparent 2px 4px),
       repeating-linear-gradient(90deg, #000, #000 2px, transparent 2px 4px),
       linear-gradient(#007f0c, #004306);
