--- a/styles/variables.css
+++ b/styles/variables.css
@@ -18,4 +18,5 @@
     --heart-body-color: transparent;
     --heart-core-color: transparent;
     --btn-like-color: #fff;
+    --floppy-color: #000;
 }
