--- a/styles/style.css
+++ b/styles/style.css
@@ -155,6 +155,13 @@
   block-size: 100%;
   object-fit: cover;
   object-position: center;
+  
+}
+
+@media (min-width: 376px) and (max-width: 1439px) {
+  .card__img {
+    margin-bottom: -5px;
+  }
 }
 
 .brightness {
